replace cdn with local resources

--- a/index.html
+++ b/index.html
@@ -3,28 +3,28 @@
 <head>  
     <meta charset="UTF-8">  
     <title>五子棋对战(canvas)</title>  
-    <link rel="stylesheet" href="./css/my.css">
+    <link rel="stylesheet" href="css/my.css">
 </head>  
 <body>  
     <canvas id="board_box" width="720" height="605" onmouseup="play(event)"></canvas>
 
     <audio id="start_audio" preload="auto" loop="loop">
-        <source src="http://dx.sc.chinaz.com/Files/DownLoad/sound1/201703/8446.mp3" type="audio/mpeg">
+        <source src="audio/start.mp3" type="audio/mpeg">
         你的浏览器不支持该音频播放
     </audio>
     <audio id="gameover_audio">
-        <source src="http://dx.sc.chinaz.com/Files/DownLoad/sound1/201504/5808.mp3" type="audio/mpeg">
+        <source src="audio/gameover.mp3" type="audio/mpeg">
         你的浏览器不支持该音频播放
     </audio>
     <audio id="tap_audio" preload="auto">
-        <source src="http://zjdx1.sc.chinaz.com/Files/DownLoad/sound1/201202/831.mp3" type="audio/mpeg">
+        <source src="audio/tap.mp3" type="audio/mpeg">
         你的浏览器不支持该音频播放
     </audio>
     <audio id="revoke_audio">
-        <source src="http://zjdx1.sc.chinaz.com/Files/DownLoad/sound1/201607/7590.mp3" type="audio/mpeg">
+        <source src="audio/revoke.mp3" type="audio/mpeg">
         你的浏览器不支持该音频播放
     </audio>
 
-    <script type="text/javascript" src="./js/my.js"></script>
+    <script type="text/javascript" src="js/my.js"></script>
 </body>  
 </html>  
